# NEAT

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  vercel.json
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  release.yml  wheels.yml
benchmark-runs/calibration/cifar10-resnet18-adamw-seed7-20260629-103826/: config.json  metrics.jsonl  result.json
benchmark-runs/head-to-head/cifar10-resnet18-adamw-seed7-20260629-132038/: config.json
benchmark-runs/lr-tuning/cifar10-resnet18-adamw-seed7-20260629-111719/: config.json  metrics.jsonl  result.json
benchmark-runs/lr-tuning/cifar10-resnet18-neat-seed7-20260629-112008/: config.json  metrics.jsonl  result.json
benchmark-runs/multiepoch-report/: summary.csv
benchmark-runs/multiepoch/cifar10-resnet18-adamw-seed11-20260629-114603/: config.json  metrics.jsonl  result.json
benchmark-runs/multiepoch/cifar10-resnet18-adamw-seed19-20260629-120658/: config.json  metrics.jsonl  result.json
benchmark-runs/multiepoch/cifar10-resnet18-adamw-seed7-20260629-112550/: config.json  metrics.jsonl  result.json
benchmark-runs/multiepoch/cifar10-resnet18-neat-seed11-20260629-115214/: config.json  (+2 more)
benchmark-runs/preliminary-report/: summary.csv
benchmarks/: __init__.py  adaptive_neat_lightweight.py  adaptive_neat_vs_baselines.py  cifar10_adaptive_neat_vs_baselines.py  compare_optimizers.py  glue_sst2_adaptive_neat_vs_baselines.py  lightweight_neat.py  research_variants.py  run.py  sweep_neat.py  vision_adaptive_neat_vs_baselines.py
benchmarks/configs/: README.md  cifar100_resnet34.yaml  cifar10_resnet18.yaml  diffusion_mnist.yaml  large_batch_stability.yaml  lm_alpaca_phi2.yaml  lm_sst2_tinyllama.yaml  rl_mujoco.yaml  vit_cifar100.yaml
benchmarks/results/: adaptive_neat_lightweight_2026-04-05.json  compaction_vs_adam_sgd_2026-04-05.json  keras_mlp_digits_2026-04-04.json  neat_accuracy_confirm_2026-04-05.json  neat_accuracy_speed_params_2026-04-05.json  neat_adaptive_confirm_2026-04-05.json  neat_candidates_only_2026-04-05.json  neat_lightweight_digits_2026-04-05.json  neat_player_short_2026-04-05.json  neat_standard_research_variants_2026-04-05.json  vision_adaptive_neat_standard_2026-04-11.json
benchmarks/tasks/: glue_sst2.py  keras_cifar10.py  keras_mlp.py  keras_vision.py  synthetic_conflict.py
benchmarks/torch_suite/: README.md  __init__.py  common.py  compare_all.py  diffusion.py  language_model.py  large_batch.py  reinforcement_learning.py  report.py  vision.py
cpp/: CMakeLists.txt
cpp/neat_core/include/neat_core/: step.h
cpp/neat_core/src/: bindings.cpp  step.cpp
data/: cifar-10-batches-py
docs/: api.md  index.md  quickstart.md
docs/contributing/: architecture.md  development.md  release.md
docs/research/: algorithm.md  benchmark-plan.md  benchmarks.md  cifar10-resnet18-mps-2026-06-29.md  math-spec.md  player-aware.md
examples/: keras_manual_apply.py  keras_mlp_tf.py  minimal_numpy.py  player_aware_tensorflow.py
scripts/: release_check.py  run_checks.sh  smoke_install.py
src/neat_optim/: __init__.py  callbacks.py  compaction.py  config.py  exceptions.py  keras_optimizer.py  state.py  torch_optimizer.py
tests/: conftest.py
tests/integration/: test_compaction.py  test_keras_optimizer.py  test_tensorflow_players.py
tests/property/: test_randomized_invariants.py
tests/regression/: test_worked_example.py
tests/unit/: test_config.py  test_functional_engine.py  test_multiplayer_engine.py  test_native_parity.py  test_reference_step.py  test_torch_optimizer.py
(+39 files in other folders)
